fixed the width alignment

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Raleway', sans-serif;
     margin: 0;
     padding: 0;
-    max-width: 100%;
+    /* width: 100%; */
     box-sizing: border-box;
     color: #fff;
 }
